# MILIX

./: .gitignore  CMakeLists.txt  README.md  build.sh  disk.img  fortranCompile.sh  installer  installer.asm  installer.bat  mkimg.sh
source/: boot.c  command.c  command.cpp  kernel.c
source/busybox/: busybox.cpp  busybox_cat.cpp  busybox_echo.cpp  busybox_ls.cpp
source/edit/: edit.c
source/packagemgr/: npkg.cpp
src/: KernelManager.asm  bootscreen.asm  busybox.asm  editor.asm  kernel.asm  milix.asm  shell.asm
src/lib/: WELCOME.BAS  editor.f95
